Change puppeteer version to 18.1.0

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A backend server for web scraping the october 6 university site.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "ts-node index.ts",
+    "monitor": "nodemon index.ts"
   },
   "repository": {
     "type": "git",
@@ -17,17 +18,17 @@
   },
   "homepage": "https://github.com/Obaadz/o6u-scraping-server#readme",
   "dependencies": {
-    "@types/express": "^4.17.15",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.2",
-    "puppeteer": "^19.4.1"
+    "puppeteer": "^18.1.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.18",
+    "@types/express": "^4.17.15",
+    "@types/mongoose": "^5.11.97",
+    "@types/cors": "^2.8.13",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
