--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "puppeteer": "^18.1.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@types/express": "^4.17.15",
-    "@types/mongoose": "^5.11.97",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
+    "@types/jquery": "^3.5.16",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
